--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+ver 1.34:
+	Fix issue with handling device info of Quectel modems.
+	Fix issue with handling callback for RIL dial manager.
+
 ver 1.33:
 	Fix issue with filling unused part of AID with FFs.
 	Fix issue with reads beyond the first block of SIM filesystem.
